--- a/FunctionAppTests/FunctionAppTests.csproj
+++ b/FunctionAppTests/FunctionAppTests.csproj
@@ -14,6 +14,8 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
     <PackageReference Include="Moq" Version="4.18.1" />
@@ -23,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FunctionApp1\FunctionApp.csproj" />
+    <ProjectReference Include="..\FunctionApp\FunctionApp.csproj" />
   </ItemGroup>
 
 </Project>
