--- a/ServiceBus.ConsoleApp/MessageBasedCommunication.ConsoleApp.csproj
+++ b/ServiceBus.ConsoleApp/MessageBasedCommunication.ConsoleApp.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.8.1" />
+    <PackageReference Include="Azure.Storage.Queues" Version="12.10.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
